# SPHINCs-

./: .gitignore  CLAUDE.md  EmitC4VerityYul.lean  README.md  Sphincs.lean  foundry.toml  lake-manifest.json  lakefile.lean  sphincs_parameters_paper_corpus.md  trace_c2_summary.txt  trace_c3_summary.txt  trace_c5_summary.txt  trace_c6_summary.txt  writeUp.md
.ralph/: ralph-history.json  ralph-loop.state.json
docs/: VERITY_C4.md
script/: .frame_c10_deploy.json  .frame_c11_deploy.json  .frame_c6_deploy.json  .frame_c7_deploy.json  .frame_c8_deploy.json  .frame_c9_deploy.json  DeployJardinSepolia.s.sol  DeployJardineroSepolia.s.sol  DeployJardineroVhSepolia.s.sol  DeployPersistentWotsH9Sepolia.s.sol  DeploySepolia.s.sol  DeploySlhDsa128_24Sepolia.s.sol  DeployWotsSepolia.s.sol  SendPersistentWotsUsdcSepolia.s.sol  deploy_frame_account.py  deploy_jardin_frame.py  frame_tx.py  jardin_call_verifier.py  jardin_cast_verify.sh  jardin_cycle.sh  jardin_frame_cycle.py  jardin_frame_tx.py  jardin_signer.py  jardin_spx_signer.py  jardin_spx_userop.py  jardin_t0_signer.py  jardin_t0_userop.py  jardin_userop.py  jardinero_frame_tx.py  persistent_wots_h9_signer.py  send_userop.py  signer.py  slh_dsa_keccak_128_24_fast_signer.py  slh_dsa_keccak_128_24_signer.py  slh_dsa_sha2_128_24_fast_signer.py  slh_dsa_sha2_128_24_signer.py  sweep_d2_fluhrer_dang.py  wots_ots_signer.py
scripts/: keccak256.py
signer-wasm/: Cargo.toml
signer-wasm/src/: fors.rs  hash.rs  keygen.rs  lib.rs  params.rs  sphincs.rs  wots.rs
signer-wasm/tests/: cross_validate.rs
src/: ForsPlusC.sol  PorsFP.sol  (+54 more)
(+79 files in other folders)
