[package]
name = "sphincs-c6-signer"
version = "0.1.0"
edition = "2021"
description = "WASM SPHINCS+ C6 signer with BIP-39/44 key derivation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
tiny-keccak = { version = "2", features = ["keccak"] }
bip39 = { version = "2", default-features = false }
hmac = "0.12"
sha2 = "0.10"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
